Trim role whitespace